z-index problem fixed

--- a/dev/styles/partials/_about.scss
+++ b/dev/styles/partials/_about.scss
@@ -2,7 +2,7 @@
     background:#ffffff no-repeat 70%;
     // background-size: 300px;
     position: relative;
-    z-index: 1;
+    z-index: -1;
     padding: 0.7%; 
 }
 .about-me{
