--- a/dev/styles/partials/_portfolio.scss
+++ b/dev/styles/partials/_portfolio.scss
@@ -1,9 +1,4 @@
-// .portfolio{
-//     background: linear-gradient(90deg, transparent, rgba(246, 133, 187, .7) 0%, rgba(212, 183, 250, 0.7) 100%);
-// }
-// .wrapper-less:first-child{
-//     margin: 0 10% 100px 10%;
-// }
+
 .wrapper-less{
     margin: 100px 10%;
 }
@@ -24,11 +19,12 @@
         max-width: 390px;
         margin: 70px 30px 0px 0;
         transition: all 0.5s;
+        box-shadow: 0px 4px 4px -2px rgba(0,0,0,0.3);
     }
     /* Scale up the box */
 img:hover {
     transform: translateY(-10px);
-    box-shadow: 0px 4px 4px -2px rgba(0,0,0,0.3);
+    box-shadow: 0px 6px 4px -2px rgba(0,0,0,0.5);
   }
   
 }
