--- a/dev/styles/partials/_skills.scss
+++ b/dev/styles/partials/_skills.scss
@@ -1,7 +1,7 @@
 .skills{
  background-color: white;
  position: relative;
- z-index: 1;
+ z-index: -1;
 }
 .skills-long-wrapper{
     width: 70%;
